--- a/package.json
+++ b/package.json
@@ -4,9 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "./node_modules/.bin/babel -w ./server/src -d ./server/lib",
+    "compile": "./node_modules/.bin/babel ./server/src -d ./server/lib",
+    "compile-client": "browserifyinc --cachefile tmp/browserify-cache.json ./client/src/index.js -t babelify -v -o ./client/bundle.js",
+    "start": "node ./server/lib",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "express": "^4.13.4",
+    "json5": "^0.4.0",
+    "normalize.css": "^3.0.3",
+    "react": "^0.14.7",
+    "slack-node": "^0.1.7",
+    "socket.io": "^1.4.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-eslint": "^4.1.8",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "browserify-incremental": "^3.0.1",
+    "react-dom": "^0.14.7"
+  }
 }
